# stock_market_visualization

./: .gitignore  README.md  pyproject.toml
data/: nasdaq_stock_screener.csv
database/: create_mock_database.py  create_sqlite_database.py  database_schema.sql  fetch_data.py  metadata.json  mock.db
src/: app.py  main.py
src/pages/: market_overview.py  not_found_404.py  performance_timeseries.py
src/utils/: __init__.py  database.py
