[project]
name = "stock-market-visualization"
version = "0.1.0"
description = "Streamlit Application for Stock Market Visualization"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas>=2.2.3",
    "yfinance>=0.2.55",
    "dash~=3.0.1",
    "dash-bootstrap-components>=1.7.1,<2.0.0",
    "dash-extensions~=1.0.20",
    "dash-mantine-components~=1.1.0",
    "pandas~=2.2.3",
    "pandera~=0.22.1",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.9.3,<1.0.0",
]

[tool.ruff]
line-length = 79

[tool.ruff.lint]
select = ["D", "E", "F", "I"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"
